--- a/_posts/2016-12-28-Jekyll 설치.md
+++ b/_posts/2016-12-28-Jekyll 설치.md
@@ -7,13 +7,18 @@ share: true
 tags: [Jekyll,window]
 date: 2016-12-28
 image:
-  feature: /assets/20161228/jekyll_logo.png)
+  feature: /assets/20161228/jekyll_logo.PNG)
   credit: Jekyll
 ---
+
 # **Jekyll 설치하기(Window)**
-![No Image](/assets/20161228/jekyll_logo.png)
+
+![No Image](/assets/20161228/jekyll_logo.PNG)
+
 ## Jekyll
+
 - #### Jekyll은 여러 형태의 텍스트와 소스들로 구성 정적 파일들을 웹사이트로 생성시켜주는 툴.
+
 - #### GitHub Pages 에서도 이용, 개인블로그도 생성 가능
 > ### Jekyll Site : https://jekyllrb-ko.github.io/
 
@@ -27,15 +32,15 @@ image:
 > ### Ruby Site : http://rubyinstaller.org/downloads/
 
 - #### PC환경에 맞게 Download
-![No Image](/assets/20161228/ruby_down.png)
+![No Image](/assets/20161228/ruby_down.PNG)
 - #### 환경변수에 자동으로 넣어주는 Option Check
-![No Image](/assets/20161228/ruby_path.png)
+![No Image](/assets/20161228/ruby_path.PNG)
 
 - ### DevKit 설치하기
 > ### Ruby Site : http://rubyinstaller.org/downloads/
 
 - #### PC환경에 맞게 Download
-![No Image](/assets/20161228/ruby_devkit.png)
+![No Image](/assets/20161228/ruby_devkit.PNG)
 
 - #### DevKit 디렉토리 만들기
 > ### C:\RubyDevkit
@@ -46,14 +51,14 @@ image:
   ### ruby dk.rb install
 
   #### 성공화면
-  ![No Image](/assets/20161228/ruby_success.png)
+  ![No Image](/assets/20161228/ruby_success.PNG)
 
 ## 3. Jekyll 설치하기
 - #### gem을 이용하여 Jekyll 설치하기 (권한 요청하면 주기)
 > ### gem install jekyll
 
   #### 성공화면
- ![No Image](/assets/20161228/jekyll_down.png)
+ ![No Image](/assets/20161228/jekyll_down.PNG)
 
   미리설치한 관계로 숫자가 적지만 원래 더 많습니다.
 
@@ -62,28 +67,28 @@ image:
 > ### gem install rouge
 
   #### 성공화면
-  ![No Image](/assets/20161228/rouge_down.png)
+  ![No Image](/assets/20161228/rouge_down.PNG)
 
 ## 4. Python 설치하기
 > ### Python Site : https://www.python.org/downloads/
 
 - #### PC환경에 맞게 Download
-  ![No Image](/assets/20161228/python_down.png)
+  ![No Image](/assets/20161228/python_down.PNG)
 - #### pip는 Python에 자동으로 설치된다.
 - #### 환경변수추가하기
 > ### C:\Python27;C:\Python27\Scripts;
 
-  ![No Image](/assets/20161228/path.png)
-  ![No Image](/assets/20161228/path2.png)
+  ![No Image](/assets/20161228/path.PNG)
+  ![No Image](/assets/20161228/path2.PNG)
 
   > ### python
 
   #### python 성공화면
- ![No Image](/assets/20161228/python_success.png)
+ ![No Image](/assets/20161228/python_success.PNG)
 > ### pip
 
   #### pip 성공화면
-  ![No Image](/assets/20161228/pip_success.png)
+  ![No Image](/assets/20161228/pip_success.PNG)
 
 - #### Pygments 설치
 > ### pip install Pygments
@@ -94,13 +99,13 @@ image:
   ### gem install wdm
   ### jekyll
 
-  ![No Image](/assets/20161228/jekyll_execute.png)
+  ![No Image](/assets/20161228/jekyll_execute.PNG)
 
 - #### Jekyll 실행하기
 > ### jekyll serve
   ### Browser로 접속 >> **127.0.0.1:4000**
 
-  ![No Image](/assets/20161228/jekyll_browser.png)
+  ![No Image](/assets/20161228/jekyll_browser.PNG)
 
 ## 6. Jekyll 사이트 생성하기
 - #### blog 디렉토리 생성
@@ -111,10 +116,10 @@ image:
   ### highlighter: rouge
   ### highlighter: Pygments
 
-  ![No Image](/assets/20161228/config.png)
+  ![No Image](/assets/20161228/config.PNG)
 
 - #### Jekyll 실행하기
 > ### jekyll serve
   ### Browser로 접속 >> **127.0.0.1:4000**
 
-  ![No Image](/assets/20161228/jekyll_browser2.png)
+  ![No Image](/assets/20161228/jekyll_browser2.PNG)
