--- a/_posts/2016-12-28-Jekyll 설치.md
+++ b/_posts/2016-12-28-Jekyll 설치.md
@@ -7,13 +7,13 @@ share: true
 tags: [Jekyll,window]
 date: 2016-12-28
 image:
-  feature: /assets/20161228/jekyll_logo.PNG)
+  feature: /assets/20161228/jekyll_logo.png)
   credit: Jekyll
 ---
 
 # **Jekyll 설치하기(Window)**
 
-![No Image](/assets/20161228/jekyll_logo.PNG)
+![No Image](/assets/20161228/jekyll_logo.png)
 
 ## Jekyll
 
