--- a/_posts/2016-12-28-Jekyll 설치.md
+++ b/_posts/2016-12-28-Jekyll 설치.md
@@ -6,9 +6,6 @@ comments: true
 share: true
 tags: [Jekyll,window]
 date: 2016-12-28
-image:
-  feature: /assets/20161228/jekyll_logo.png)
-  credit: Jekyll
 ---
 
 # **Jekyll 설치하기(Window)**
@@ -47,8 +44,8 @@ image:
 
 - #### CMD창에서 Devkit 초기화 하기
 > ### cd C:\RubyDevkit
-  ### ruby dk.rb init
-  ### ruby dk.rb install
+> ### ruby dk.rb init  
+> ### ruby dk.rb install
 
   #### 성공화면
   ![No Image](/assets/20161228/ruby_success.PNG)
@@ -84,8 +81,9 @@ image:
   > ### python
 
   #### python 성공화면
- ![No Image](/assets/20161228/python_success.PNG)
-> ### pip
+  ![No Image](/assets/20161228/python_success.PNG)
+
+  > ### pip
 
   #### pip 성공화면
   ![No Image](/assets/20161228/pip_success.PNG)
@@ -96,14 +94,15 @@ image:
 ## 5. Jekyll 실행하기
 - #### Jekyll 폴더 만들기 & 명령어 실행하기
 > ### mkdir C:\jekyll
-  ### gem install wdm
-  ### jekyll
+> ### gem install wdm
+> ### jekyll
+
 
   ![No Image](/assets/20161228/jekyll_execute.PNG)
 
 - #### Jekyll 실행하기
 > ### jekyll serve
-  ### Browser로 접속 >> **127.0.0.1:4000**
+> ### Browser로 접속 >> **127.0.0.1:4000**
 
   ![No Image](/assets/20161228/jekyll_browser.PNG)
 
@@ -113,13 +112,13 @@ image:
 
 - #### 환경설정하기 : config.yml 맨끝에 추가하기
 > ### encoding: utf-8
-  ### highlighter: rouge
-  ### highlighter: Pygments
+> ### highlighter: rouge
+> ### highlighter: Pygments
 
   ![No Image](/assets/20161228/config.PNG)
 
 - #### Jekyll 실행하기
 > ### jekyll serve
-  ### Browser로 접속 >> **127.0.0.1:4000**
+> ### Browser로 접속 >> **127.0.0.1:4000**
 
   ![No Image](/assets/20161228/jekyll_browser2.PNG)
