Update : Travis_CI post, Modified : author post

--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -7,14 +7,21 @@ share: false
 date: 1992-04-24
 ---
 
-Profile
+## Profile
 
-Links
+## Links
 
-Interests
+- Email : kyoje11@gmail.com
 
-Awards
+- Github : [https://github.com/nesoy](https://github.com/nesoy)
 
-Campus Activities
+- Blog : [https://nesoy.github.io/](https://nesoy.github.io/)
 
-Skill
+
+## Interests
+
+## Awards
+
+## Campus Activities
+
+## Skill
