Modified : Travis-CI post

--- a/_posts/2017-01-05-travis-ci.md
+++ b/_posts/2017-01-05-travis-ci.md
@@ -17,19 +17,25 @@ date: 2017-01-05
 - GitHub 아이디의 프로젝트를 연결하여 테스트, 빌드 및 배포 가능
 
 ## Getting Started
+
 #### 1. 프로젝트 fork하기
+
 - [https://github.com/plaindocs/travis-broken-example](https://github.com/plaindocs/travis-broken-example)
 
-#### 2. Travis-CI 회원가입하기 : [https://travis-ci.org/auth](https://travis-ci.org/auth)
+#### 2. Travis-CI 회원가입하기
+
+- [https://travis-ci.org/auth](https://travis-ci.org/auth)
 
 ![No Image](/assets/20170105/travis-ci-signup.PNG)
 
 #### 3. Github Repositories 엑세스 권한 활성화 시키기
+
 - [https://travis-ci.org/profile](https://travis-ci.org/profile)
 
 ![No Image](/assets/20170105/travis-ci-start1.PNG)
 
 #### 4. .travis.yml 확인하기
+
 {% highlight yml %}
 language: php
 php:
