Modified : Maven Post

--- a/_posts/2017-01-11-Maven.md
+++ b/_posts/2017-01-11-Maven.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Maven 이란?
+title: Intellij Maven
 categories: [Maven]
 excerpt: " "
 comments: true
@@ -54,6 +54,7 @@ date: 2017-01-11
   ![No Image](/assets/20170111/mvnRepository.PNG)
 
   - pom.xml에 dependencies Tag 안에 쓰고 저장하기
+
   ```xml
   <!-- 프로젝트와 의존관계에 있는 라이브러를 관리 -->
   <dependencies>
@@ -73,18 +74,18 @@ date: 2017-01-11
  > Maven은 미리 정의하고 있는 빌드 순서를 라이프사이클 이라고 한다.
 
 - ##### 기본 라이프 사이클
- - compile : 소스 코드를 컴파일
- - test : 단위 테스트 실행 (기본설정은 단위 테스트가 실패하면 빌드 실패로 간주함)
- - package : 컴파일된 클래스 파일과 리소스 파일들을 war 혹은 jar와 같은 파일로 패키징
- - install : 패키징한 파일을 로컬 저장소에 배포 (USER_HOEM/.m2/)
- - deploy : 패키징한 파일을 원격 저장소에 배포 (nexus 혹은 maven central 저장소)
+  - compile : 소스 코드를 컴파일
+  - test : 단위 테스트 실행 (기본설정은 단위 테스트가 실패하면 빌드 실패로 간주함)
+  - package : 컴파일된 클래스 파일과 리소스 파일들을 war 혹은 jar와 같은 파일로 패키징
+  - install : 패키징한 파일을 로컬 저장소에 배포 (USER_HOEM/.m2/)
+  - deploy : 패키징한 파일을 원격 저장소에 배포 (nexus 혹은 maven central 저장소)
 
 - ##### clean 라이프 사이클
- - clean : 메이븐 빌드를 통하여 생성된 모든 산출물을 삭제
+  - clean : 메이븐 빌드를 통하여 생성된 모든 산출물을 삭제
 
 - ##### site 라이프 사이클
- - site : 메이븐 설정파일 정보를 활용하여 프로젝트에 대한 문서 사이트를 생성
- - site-deploy : 생성한 문서 사이트를 설정되어 있는 서버에 배포
+  - site : 메이븐 설정파일 정보를 활용하여 프로젝트에 대한 문서 사이트를 생성
+  - site-deploy : 생성한 문서 사이트를 설정되어 있는 서버에 배포
 
 - #### Intellij Maven Project 만들기
   - ##### Maven 선택하기
