--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -8,6 +8,9 @@ date: 1992-04-24
 ---
 
 ## Profile
+- Bachelor in Computer Engineering from [Hansung University](http://www.hansung.ac.kr/)
+
+- Serving a mandatory military service at 2014
 
 ## Links
 
@@ -17,11 +20,29 @@ date: 1992-04-24
 
 - Blog : [https://nesoy.github.io/](https://nesoy.github.io/)
 
-
 ## Interests
 
 ## Awards
+- 2015.09.23 | Hansung University Engineering Contest **2nd** Prize – FingerKeyboard
+- 2016.06.03 | Hansung University Capstone Design **1st** Prize - SoundCatcher
+- 2016.09.23 | Hansung University Engineering Contest **4nd** Prize – SoundCatcher
+- 2016.12.08 | Embedded Software Contest **2nd** Prize - SoundCatcher(Casper) - [Link](http://eswcontest.com/bbs/board.php?tbl=award&category=2016%B3%E2)
+
 
 ## Campus Activities
+- 2015.03.02 ~ 06.08 | Tutoring
+- 2015.08.31 ~ 12.11 | Tutoring
+- 2015.09.21 ~ 12.04 | Tutoring
+- 2016.02.29 ~ 06.10 | Tutoring
+- 2016.06.23~24 | Naver Campus Hack Day
 
 ## Skill
+
+## Project
+- FingerKeyboard | [Code](https://github.com/FingerKeyboard-jh-sm/FingerKeyboard) | [Video](https://www.youtube.com/watch?v=xI_Y875FghU)
+- SoundCatcher | [Code](https://github.com/SCCasper) | [Video](https://www.youtube.com/watch?v=h2jTrTSD1wQ)
+
+## Press
+2015.09.23 Hansung University Engineering Contest **2nd** Prize
+- [asiatoday](http://www.asiatoday.co.kr/view.php?key=20151007001927323)
+- [moneytoday](http://www.mt.co.kr/view/mtview.php?type=1&no=2015092423497453318&outlink=1)
