--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -10,7 +10,7 @@ date: 1992-04-24
 ## Profile
 - Bachelor in Computer Engineering from [Hansung University](http://www.hansung.ac.kr/)
 
-- Serving a mandatory military service at 2014
+- 2012.04 ~ 2014.01 :: Serving a mandatory military service
 
 ## Links
 
