Modify : TDD Post

--- a/_posts/2017-01-31-TDD.md
+++ b/_posts/2017-01-31-TDD.md
@@ -55,7 +55,7 @@ date: 2017-01-31
 			<version>1.1</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+</dependencies>
 ```
 
 #### 3) JUnit 실행
@@ -173,7 +173,7 @@ public class MovieTest {
 }
 ```
 
-#### 9) Averaging Rating Test Case만들기 - 1을 주었을때 Average Rate가 1이 나와야한다.
+#### 9) Averaging Rating Test Case만들기 -> 1을 주었을때 Average Rate가 1이 나와야한다.
 
 ```java
 package movie;
@@ -348,7 +348,7 @@ public class MovieTest {
 }
 ```
 
-#### 12) Averaging Rating Test Case만들기 - 3,5을 주었을때 Average Rate가 4이 나와야한다.
+#### 12) Averaging Rating Test Case만들기 -> 3,5을 주었을때 Average Rate가 4이 나와야한다.
 
 ```java
 @Test
@@ -380,6 +380,7 @@ Test 결과화면
 ## 단축키
 
 Ctrl + Shift + A = Split Vertical
+
 Ctrl + Shift + A = Field  ( Ctrl + Alt + F)
 
 ## 참조
