Modify : TDD & JUnit Title

--- a/_posts/2017-01-31-TDD.md
+++ b/_posts/2017-01-31-TDD.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 테스트 주도 개발방법론 : TDD(Test-driven Development)이란?
+title: 테스트 주도 개발방법론 TDD(Test-driven Development)이란?
 categories: [Development Process]
 excerpt: ' '
 comments: true
