Modify : JUnit Post

--- a/_posts/2017-01-31-TDD.md
+++ b/_posts/2017-01-31-TDD.md
@@ -37,7 +37,7 @@ date: 2017-01-31
 #### 1) JUnit이란?
 - 범용적으로 사용되는 단위 테스트 Framework
 - Java 언어의 단위 테스트를 위해 사용된다.
-- 더 자세한 내용은 나중에 포스팅하겠다.
+- 더 자세한 내용은 JUnit Post <https://nesoy.github.io/articles/2017-02/JUnit>를 참고하면 된다.
 
 #### 2) pom.xml JUnit & hamcrest 추가 코드
 
@@ -377,11 +377,11 @@ Test 결과화면
 
 
 
-## 단축키
+## Intellj 단축키
 
-Ctrl + Shift + A = Split Vertical
+- 화면 나누기 : Ctrl + Shift + A + Split Vertical
 
-Ctrl + Shift + A = Field  ( Ctrl + Alt + F)
+- REfactoring Field : Ctrl + Shift + A + Field  ( Ctrl + Alt + F)
 
 ## 참조
 
