Modify : Image File Name , typo

--- a/_posts/2017-01-31-TDD.md
+++ b/_posts/2017-01-31-TDD.md
@@ -381,7 +381,7 @@ Test 결과화면
 
 - 화면 나누기 : Ctrl + Shift + A + Split Vertical
 
-- REfactoring Field : Ctrl + Shift + A + Field  ( Ctrl + Alt + F)
+- Refactoring Field : Ctrl + Shift + A + Field  ( Ctrl + Alt + F)
 
 ## 참조
 
