--- a/_posts/2017-02-06-REST.md
+++ b/_posts/2017-02-06-REST.md
@@ -5,7 +5,7 @@ categories: [Web]
 excerpt: ' '
 comments: true
 share: true
-tags: [RESTful,,REST,API,Web]
+tags: [RESTful,REST,API,Web]
 date: 2017-02-06
 ---
 
