Modify : REST Post

--- a/_posts/2017-02-06-REST.md
+++ b/_posts/2017-02-06-REST.md
@@ -17,7 +17,8 @@ date: 2017-02-06
 ## RESTful이란?
 
 - REST는 Representational State Transfer라는 용어의 약자로서 **웹의 장점을 최대한 활용할 수 있는 아키텍처**
-- 최근의 서버 프로그램은 다양한 브라우저와 안드로이폰, 아이폰과 같은 모바일 디바이스에서도 통신을 할 수 있어야 한다. REST 아키텍처는 Hypermedia API의 기본을 충실히 지키면서 범용성을 보장한다.
+- 최근의 서버 프로그램은 다양한 브라우저와 안드로이폰, 아이폰과 같은 모바일 디바이스에서도 통신을 할 수 있어야 한다.
+- REST 아키텍처는 Hypermedia API의 기본을 충실히 지키면서 범용성을 보장한다.
 
 
 ## REST의 특징
@@ -109,7 +110,7 @@ http://test.com/test -- 서로 다른 Resource : test
 
 ##### 2.3 확장자를 사용하지 말자
 
-- REST API에서는 확장자를 사용하지 않으면서 자원(Resource)가 더 유연해 진다.
+- REST API에서는 확장자를 사용하지 않으면서 자원(Resource)을 다루는 데  더 유연해 진다.
 - 확장자 대신에 Accept Header를 사용하여 문제를 해결한다.
 
 ```
