Modify : JSON post

--- a/_posts/2017-02-08-JSON.md
+++ b/_posts/2017-02-08-JSON.md
@@ -25,7 +25,7 @@ date: 2017-02-08
 - 여러 가지 언들에서 object, hashtable, struct로 실현되었다.
 - { String key :  String Value}
 
-```JSON
+```json
 {
   "firstName": "Kwon",
   "lastName": "YoungJae",
@@ -37,7 +37,7 @@ date: 2017-02-08
 - 여러 가지 언어들에서 배열(Array), 리스트(List)로 실현되었다.
 - [ value1, value2, ..... ]
 
-```JSON
+```json
 {
   "firstName": "Kwon",
   "lastName": "YoungJae",
@@ -56,7 +56,7 @@ date: 2017-02-08
 
 ![NO Image](/assets/20170208/1.PNG)
 
-```XML
+```xml
 <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
@@ -71,13 +71,13 @@ date: 2017-02-08
 
 - annotation-driven 활성화 하기
 
-```XML
+```xml
 <mvc:annotation-driven></mvc:annotation-driven>
 ```
 
 - RestfulController의 getUserList 코드
 
-```Java
+```java
 @RequestMapping(value = "/users", method = RequestMethod.GET)
 @ResponseBody
 public Map getUserList(){
@@ -91,10 +91,25 @@ public Map getUserList(){
 }
 ```
 
-#### 3.3 서버를 작동시켜 확인해보기
+#### 3.3 서버를 작동시켜 확인해보기.
 - RequestMapping된 주소인 http://localhost:8080/users 확인해보자.
 
+- 결과 모습 : 잘 도착했지만 보기가 불편하다.
+
 ![NO Image](/assets/20170208/2.PNG)
+
+
+#### 3.4 PostMan을 통해 이쁘게 보자.
+
+![NO Image](/assets/20170208/postman.PNG)
+
+- Postman이라는 크롬 앱을 통해 이쁘게 볼 수도 있고 다양한 테스트도 가능하다.
+
+- Download : <https://chrome.google.com/webstore/detail/postman/fhbjgbiflinjbdggehcddcbncdddomop>
+
+- 결과 모습 : 이쁜 모습으로 볼 수 있다.
+
+![NO Image](/assets/20170208/3.PNG)
 
 
 ## 참조
