Modify : JSON Post

--- a/_posts/2017-02-08-JSON.md
+++ b/_posts/2017-02-08-JSON.md
@@ -99,15 +99,15 @@ public Map getUserList(){
 ![NO Image](/assets/20170208/2.PNG)
 
 
-#### 3.4 PostMan을 통해 이쁘게 보자.
+#### 3.4 PostMan을 통해 예쁘게 보자.
 
 ![NO Image](/assets/20170208/postman.PNG)
 
-- Postman이라는 크롬 앱을 통해 이쁘게 볼 수도 있고 다양한 테스트도 가능하다.
+- Postman이라는 크롬 앱을 통해 예쁘게 볼 수도 있고 다양한 테스트도 가능하다.
 
 - Download : <https://chrome.google.com/webstore/detail/postman/fhbjgbiflinjbdggehcddcbncdddomop>
 
-- 결과 모습 : 이쁜 모습으로 볼 수 있다.
+- 결과 모습 : 예쁜 모습으로 볼 수 있다.
 
 ![NO Image](/assets/20170208/3.PNG)
 
