Update : Jenkins Post  Modified : Travis-CI Tag

--- a/_posts/2017-01-05-travis-ci.md
+++ b/_posts/2017-01-05-travis-ci.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: Travis-CI 시작하기
-categories: [Travis-CI]
+categories: [Continuous Integration]
 excerpt: " "
 comments: true
 share: true
-tags: [Travis-CI]
+tags: [Travis-CI,Continuous Integration,CI]
 date: 2017-01-05
 ---
 
