Modify : Jenkins Post Title

--- a/_posts/2017-02-20-Jenkins.md
+++ b/_posts/2017-02-20-Jenkins.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 젠킨스(Jenkins) 설치하기(Edit)
+title: 젠킨스(Jenkins) 설치하기
 categories: [Continuous Integration]
 excerpt: ' '
 comments: true
