Update : Author Post

--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -21,6 +21,12 @@ date: 1992-04-24
 - Blog : [https://nesoy.github.io/](https://nesoy.github.io/)
 
 ## Interests
+Web / Server / Network / Software Engineering
+
+## Technical Skill
+- Program Language - C, C++, Java
+- Version Control System - Git
+- Database - MySql
 
 ## Awards
 - 2015.09.23 :: Hansung University Engineering Contest **2nd** Prize – FingerKeyboard
@@ -32,14 +38,21 @@ date: 1992-04-24
 - 2016.12.08 :: Embedded Software Contest **2nd** Prize - SoundCatcher(Casper)
 
 
-## Campus Activities
-- 2015.03.02 ~ 06.08 : Tutoring
-- 2015.08.31 ~ 12.11 : Tutoring
-- 2015.09.21 ~ 12.04 : Tutoring
-- 2016.02.29 ~ 06.10 : Tutoring
+## Activities
+- 2015.03.02 ~ 06.08 : Mentoring - C Language
+- 2015.08.31 ~ 12.11 : Mentoring - C++ Language
+- 2015.09.21 ~ 12.04 : Mentoring - Data Structure
+- 2016.02.29 ~ 06.10 : Mentoring - Programming Lab
+- 2016.09.23 ~ 12.07 : Mentoring - Java Language
+
 - 2016.06.23 ~ 06.24 : **Naver Campus Hack Day**
 
-## Skill
+- 2015.01.16 ~ 01.20 : Programming Camp
+- 2016.01.16 ~ 01.20 : Programming Camp
+- 2017.01.16 ~ 01.20 : Programming Camp Mentor
+
+- 2016.03.04 ~ 06.30 : Start-up Competition
+
 
 ## Project
 - #### FingerKeyboard - Embedded Image processing KeyBoard
