Update : Activities & Certificate

--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -39,20 +39,31 @@ Web / Server / Network / Software Engineering
 
 
 ## Activities
-- 2015.03.02 ~ 06.08 : Mentoring - C Language
-- 2015.08.31 ~ 12.11 : Mentoring - C++ Language
-- 2015.09.21 ~ 12.04 : Mentoring - Data Structure
-- 2016.02.29 ~ 06.10 : Mentoring - Programming Lab
-- 2016.09.23 ~ 12.07 : Mentoring - Java Language
+#### 2015
+- 2015.01.19 ~ 01.24 :: Hansung University **Programming Camp**
+- 2015.03.02 ~ 06.08 :: **Mentoring** - C Language
+- 2015.08.31 ~ 12.11 :: **Mentoring** - C++ Language
+- 2015.09.21 ~ 12.04 :: **Mentoring** - Data Structure
+- 2015.09.23 ~ 09.24 :: Hansung University **Engineering Contest** - FingerKeyboard
 
-- 2016.06.23 ~ 06.24 : **Naver Campus Hack Day**
+#### 2016
+- 2016.01.25 ~ 01.29 :: Hansung University **Programming Camp**
+- 2016.02.29 ~ 06.10 :: **Mentoring** - Programming Lab
+- 2016.03.04 ~ 06.30 :: Hansung University **Capstone Design** - SoundCatcher
+- 2016.03.19 ~ 06.30 :: ihateFlyingBugs Supports Project - SoundCatcher
+- 2016.03.15 ~ 07.01 :: Hansung University **Start-up Competition** - SoundCatcher
+- 2016.05.02 ~ 11.18 :: **Embedded Software Contest** - SoundCatcher
+- 2016.06.23 ~ 06.24 :: **Naver Campus Hack Day**
+- 2016.09.23 ~ 12.07 :: **Mentoring** - Java Language
+- 2016.09.27 ~ 09.28 :: Hansung University **Engineering Contest** - SoundCatcher
 
-- 2015.01.16 ~ 01.20 : Programming Camp
-- 2016.01.16 ~ 01.20 : Programming Camp
-- 2017.01.16 ~ 01.20 : Programming Camp Mentor
+#### 2017
+- 2017.01.16 ~ 01.20 :: Hansung University Programming Camp Mentor
 
-- 2016.03.04 ~ 06.30 : Start-up Competition
-
+## Certificate
+- Microsoft Office Specialist(MOS)
+- 워드프로세서 1급
+- ITQ
 
 ## Project
 - #### FingerKeyboard - Embedded Image processing KeyBoard
