Update : Author Post

--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -20,6 +20,8 @@ date: 1992-04-24
 
 - Blog : [https://nesoy.github.io/](https://nesoy.github.io/)
 
+- Facebook : <https://www.facebook.com/Nesoy92>
+
 ## Interests
 Web / Server / Network / Software Engineering
 
@@ -27,6 +29,7 @@ Web / Server / Network / Software Engineering
 - Program Language - C, C++, Java
 - Version Control System - Git
 - Database - MySql
+- Web Framework - Spring
 
 ## Awards
 - 2015.09.23 :: Hansung University Engineering Contest **2nd** Prize – FingerKeyboard
@@ -59,11 +62,6 @@ Web / Server / Network / Software Engineering
 
 #### 2017
 - 2017.01.16 ~ 01.20 :: Hansung University Programming Camp Mentor
-
-## Certificate
-- Microsoft Office Specialist(MOS)
-- 워드프로세서 1급
-- ITQ
 
 ## Project
 - #### FingerKeyboard - Embedded Image processing KeyBoard
