--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -64,10 +64,14 @@ Web / Server / Network / Software Engineering
 - 2017.01.16 ~ 01.20 :: Hansung University Programming Camp Mentor
 
 ## Project
+- #### Train Reserve Service
+  [Code](https://github.com/NESOY/TrainReserveService)
+- #### Pokemon Block Game
+  [Code](https://github.com/NESOY/PokemonBlockGame)
 - #### FingerKeyboard - Embedded Image processing KeyBoard
- [Code](https://github.com/FingerKeyboard-jh-sm/FingerKeyboard) :: [Video](https://www.youtube.com/watch?v=xI_Y875FghU)
+  [Code](https://github.com/FingerKeyboard-jh-sm/FingerKeyboard) :: [Video](https://www.youtube.com/watch?v=xI_Y875FghU)
 - #### SoundCatcher - Embedded Streaming Server
-[Code](https://github.com/SCCasper) :: [Video](https://www.youtube.com/watch?v=h2jTrTSD1wQ)
+  [Code](https://github.com/SCCasper) :: [Video](https://www.youtube.com/watch?v=h2jTrTSD1wQ)
 
 ## Press
 2015.09.23 Hansung University Engineering Contest **2nd** Prize
