--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -68,6 +68,8 @@ Web / Server / Network / Software Engineering
   [Code](https://github.com/NESOY/TrainReserveService)
 - #### Pokemon Block Game
   [Code](https://github.com/NESOY/PokemonBlockGame)
+- #### PixcelGun
+  [Code](https://github.com/NESOY/PixelGun)
 - #### FingerKeyboard - Embedded Image processing KeyBoard
   [Code](https://github.com/FingerKeyboard-jh-sm/FingerKeyboard) :: [Video](https://www.youtube.com/watch?v=xI_Y875FghU)
 - #### SoundCatcher - Embedded Streaming Server
