--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -34,6 +34,8 @@ Web / Server / Network / Software Engineering
 ## Awards
 - 2015.09.23 :: Hansung University Engineering Contest **2nd** Prize – FingerKeyboard
 
+- 2015.09.23 :: Hansung University IPP Industry-University Cooperation Award
+
 - 2016.06.03 :: Hansung University Capstone Design **1st** Prize - SoundCatcher
 
 - 2016.09.23 :: Hansung University Engineering Contest **4nd** Prize – SoundCatcher
@@ -64,11 +66,11 @@ Web / Server / Network / Software Engineering
 - 2017.01.16 ~ 01.20 :: Hansung University Programming Camp Mentor
 
 ## Project
-- #### Train Reserve Service
+- #### Train Reservation Service - Using C Language
   [Code](https://github.com/NESOY/TrainReserveService)
-- #### Pokemon Block Game
+- #### Pokemon Block Game - Java Game using XML
   [Code](https://github.com/NESOY/PokemonBlockGame)
-- #### PixcelGun
+- #### PixcelGun - Java Network Shooting Game
   [Code](https://github.com/NESOY/PixelGun)
 - #### FingerKeyboard - Embedded Image processing KeyBoard
   [Code](https://github.com/FingerKeyboard-jh-sm/FingerKeyboard) :: [Video](https://www.youtube.com/watch?v=xI_Y875FghU)
