--- a/_posts/2017-03-18-ZSH.md
+++ b/_posts/2017-03-18-ZSH.md
@@ -9,13 +9,13 @@ tags: [Develop,Shell,Mac]
 date: 2017-03-18
 ---
 
-## oh-my-zsh 적용한 모습
+## 터미널모양을 바꿔보자 :)
 
 ![No Image](/assets/20170318/Title.PNG)
 
 ## oh-my-zsh 설치하기
 
-#### 현재 설치되어 있는 쉘(Shell) 확인하기
+#### 1. 현재 설치되어 있는 쉘(Shell) 확인하기
 
 ```shell
 $ cat /etc/shell
@@ -23,27 +23,29 @@ $ cat /etc/shell
 
 ![No Image](/assets/20170318/1.PNG)
 
-#### ZSH 버젼(Version)확인하기
+#### 2. ZSH 버젼(Version)확인하기
 
 ```shell
 $ zsh --version
 ```
 
-#### Brew 설치하기
+#### 3. Brew 설치하기
 
 ```shell
 $ /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 ```
 
-#### ZSH 최신 버젼(Version) 설치하기
+#### 4. ZSH 최신 버젼(Version) 설치하기
 
 ```shell
 $ brew install zsh
 ```
 
-#### Oh my zsh 설치하기
+#### 5. oh-my-zsh 설치하기
 
 - oh-my-zsh Site = <http://ohmyz.sh/>
+
+- Site Install code
 
 ![No Image](/assets/20170318/2.PNG)
 
@@ -51,19 +53,25 @@ $ brew install zsh
 $ sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
 ```
 
+- 설치 완료 후 모습
+
 ![No Image](/assets/20170318/3.PNG)
 
 ## 테마 적용하기
 - Theme 미리보기 :  <https://github.com/robbyrussell/oh-my-zsh/wiki/External-themes>
 
-- 저는 agnoster를 적용하였습니다.
+- 저는 **agnoster** 를 적용하였습니다.
 
 ```shell
 $ vim ~/.zshrc
 $ ZSH_THEME="agnoster"
 ```
 
+- random으로 하면 테마가 랜덤으로 바뀐다.
+
 ![No Image](/assets/20170318/4.PNG)
+
+- 변경한 내용 적용하기
 
 ```shell
 $ source ~/.zshrc
@@ -86,9 +94,11 @@ $ source ~/.zshrc
 
 ![No Image](/assets/20170318/7.PNG)
 
-- 저는 Solarized Black을 가져와 적용하였습니다.
+- 저는 **Solarized Black** 을 가져와 적용하였습니다.
 
 ![No Image](/assets/20170318/8.PNG)
+
+- 적용한 모습
 
 ![No Image](/assets/20170318/9.PNG)
 
@@ -104,9 +114,9 @@ echo "\ue0b0 \u00b1 \ue0a0 \u27a6 \u2718 \u26a1 \u2699"
 
 ![No Image](/assets/20170318/11.PNG)
 
-- 폰트 받기 : [Site](https://github.com/powerline/fonts/blob/master/Meslo/Meslo%20LG%20M%20DZ%20Regular%20for%20Powerline.otf)
+- 폰트 다운로드 받기 : [Site](https://github.com/powerline/fonts/blob/master/Meslo/Meslo%20LG%20M%20DZ%20Regular%20for%20Powerline.otf)
 
-- 폰트 변경하기
+- 다운로드한 폰트로 변경하기
 
 ![No Image](/assets/20170318/12.PNG)
 
@@ -119,3 +129,43 @@ echo "\ue0b0 \u00b1 \ue0a0 \u27a6 \u2718 \u26a1 \u2699"
 - 결과 확인하기
 
 ![No Image](/assets/20170318/16.PNG)
+
+## Intellij 터미널에 적용하기
+
+- Shell Path 변경하기
+
+![No Image](/assets/20170318/17.PNG)
+
+- 적용한 모습
+
+![No Image](/assets/20170318/18.PNG)
+
+## PS이름 바꾸기
+
+- 테마 변경하기
+![No Image](/assets/20170318/19.PNG)
+
+```shell
+$ cd ~/.oh-my-zsh/themes
+$ vim 사용하고있는 theme 이름.zsh-theme
+```
+
+![No Image](/assets/20170318/20.PNG)
+
+- promt_context()안에 내용 변경하기
+
+![No Image](/assets/20170318/21.PNG)
+
+```shell
+$USER@%m // 유저이름과 머신 이름
+//편하게 바꾸시면 됩니다.
+```
+
+- 적용화면
+
+![No Image](/assets/20170318/22.PNG)
+
+
+
+## 참조
+- <http://thdev.tech/mac/2016/05/01/Mac-ZSH-Install.html>
