Change Highlight Tag : Javascript -> Javascript

--- a/_posts/2017-04-13-Nodejs.md
+++ b/_posts/2017-04-13-Nodejs.md
@@ -69,7 +69,7 @@ date: 2017-04-13
 #### 일정 시간 뒤 호출
 - `setTimeout(callback, delay, arg, ...)`
 
-```Javascript
+```javascript
 function sayHello() {
     console.log('Hello World');
 }
@@ -82,7 +82,7 @@ setTimeout(function () {
 #### 타이머 취소
 - `clearTimeout()`
 
-```Javascript
+```javascript
 var t = setTimeout(sayHello, 10);
 /* 타임아웃 제거 */
 clearTimeout(t);
@@ -91,7 +91,7 @@ clearTimeout(t);
 #### 반복
 - `setInterval(callback, delay, arg, ...)`
 
-```Javascript
+```javascript
 function sayGoodBye(who) {
     console.log('GoodBye', who)
 }
@@ -105,7 +105,7 @@ setInterval(function () {
 #### 반복타이머 삭제
 - `clearInterval()`
 
-```Javascript
+```javascript
 /* 인터벌 제거 */
 clearInterval(sayGoodBye());
 ```
@@ -114,7 +114,7 @@ clearInterval(sayGoodBye());
 
 #### 값 출력
 
-```Javascript
+```javascript
 console.log('log', 'log message');
 console.info('info', 'info message');
 console.warn('warn', 'warn message');
@@ -123,7 +123,7 @@ console.error('error', 'error message');
 
 #### 객체형 출력
 
-```Javascript
+```javascript
 var obj = {
     name: 'IU',
     job: 'Singer'
@@ -133,7 +133,7 @@ console.log('obj', obj); // 객체 내용 보기
 
 #### Custom Console(커스텀 콘솔)
 
-```Javascript
+```javascript
 var fs = require('fs'); // 파일 입출력 모듈
 var output = fs.createWriteStream('stdout.log'); // Output 위치 지정
 var errorOutput = fs.createWriteStream('error.log'); // Error output 위치 지정
@@ -148,7 +148,7 @@ logger.error('error message');
 
 #### 실행 시간 측정하기
 
-```Javascript
+```javascript
 /* 실행시간 측정 */
 console.time("START");
 var sum = 0;
@@ -164,7 +164,7 @@ console.timeEnd("START")
 - `var util = require('util');`
 - placeholder :  `%s : String`, `%d : Number`, `%j : JSON`
 
-```Javascript
+```javascript
 var str1 = util.format('%d + %d = %d',1,2,(1+2));
 var str2 = util.format('%s %s', 'Hello','World')
 ```
@@ -172,7 +172,7 @@ var str2 = util.format('%s %s', 'Hello','World')
 #### inherits(상속)
 - `util.inherits(constructor, superConstructor)`
 
-```Javascript
+```javascript
 function Parent() {
 
 }
@@ -192,7 +192,7 @@ child.sayHello();
 ```
 
 ### Event(이벤트)
-```Javascript
+```javascript
 process.on('exit', function (code) {  // 이벤트가 발생할 때마다 동작
     console.log('exit event : ', code);
 })
@@ -221,7 +221,7 @@ sayTest();
 
 #### error Handle
 
-```Javascript
+```javascript
 emitter.on('event',function(error,result){
   if(error){
     // Handle Error
