--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -64,6 +64,7 @@ Web / Server / Network / Software Engineering
 
 #### 2017
 - 2017.01.16 ~ 01.20 :: Hansung University Programming Camp Mentor
+- 2017.04.19 ~       :: SK Tacademy Server Developer Course
 
 ## Project
 - #### Train Reservation Service - Using C Language
