--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -20,7 +20,11 @@ date: 1992-04-24
 
 - Blog : [https://nesoy.github.io/](https://nesoy.github.io/)
 
-- Facebook : <https://www.facebook.com/Nesoy92>
+- [Facebook](https://www.facebook.com/Nesoy92)
+
+- [LinkedIn](https://www.linkedin.com/in/young-jae-kwon-3514b3141/)
+
+- [SlideShare](http://slideshare.net/YoungJaeKwon3)
 
 ## Interests
 Web / Server / Network / Software Engineering
