--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -92,3 +92,7 @@ Web / Server / Network / Software Engineering
 2016.12.08 Embedded Software Contest **2nd** Prize - SoundCatcher(Casper)
 
 - [Link](http://eswcontest.com/bbs/board.php?tbl=award&category=2016%B3%E2)
+
+## License
+- 2014.01.31 :: Word Processor
+- 2016.06.17 :: MOS Master
