--- a/_posts/2017-05-09-mysql-UTF8.md
+++ b/_posts/2017-05-09-mysql-UTF8.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: MySQL 한글 깨짐 현상 해결하기(UTF8)
-categories: [Git]
+categories: [MySQL]
 excerpt: " "
 comments: true
 share: true
