--- a/_posts/2017-05-18-AWS.md
+++ b/_posts/2017-05-18-AWS.md
@@ -70,7 +70,7 @@ date: 2017-05-18
 
 ![No Image](/assets/20170518/16.PNG)
 
-- `Edit Security Group` 클릭
+- `Launch` 클릭
 
 ![No Image](/assets/20170518/17.PNG)
 
