Update Profile & Author Post

--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -30,10 +30,10 @@ date: 1992-04-24
 Web / Server / Network / Software Engineering
 
 ## Technical Skill
-- Program Language - C, C++, Java
+- Program Language - Javascript, C, C++, Java
+- Web Framework - Spring, Nodejs
+- Database - MySql, MongoDB
 - Version Control System - Git
-- Database - MySql
-- Web Framework - Spring
 
 ## Awards
 - 2015.09.23 :: Hansung University Engineering Contest **2nd** Prize – FingerKeyboard
@@ -68,7 +68,7 @@ Web / Server / Network / Software Engineering
 
 #### 2017
 - 2017.01.16 ~ 01.20 :: Hansung University Programming Camp Mentor
-- 2017.04.19 ~       :: SK Tacademy Server Developer Course
+- 2017.04.19 ~       :: **SK Tacademy Server Developer Course**
 
 ## Project
 - #### Train Reservation Service - Using C Language
