Update Post, Profile

--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -31,9 +31,10 @@ Web / Server / Network / Software Engineering
 
 ## Technical Skill
 - Program Language - Javascript, C, C++, Java
-- Web Framework - Spring, Nodejs
-- Database - MySql, MongoDB
+- Web Framework - Spring, Nodejs - Express
+- Database - MySql, MongoDB, AWS RDB
 - Version Control System - Git
+- Server - AWS EC2
 
 ## Awards
 - 2015.09.23 :: Hansung University Engineering Contest **2nd** Prize – FingerKeyboard
@@ -81,7 +82,11 @@ Web / Server / Network / Software Engineering
   [Code](https://github.com/FingerKeyboard-jh-sm/FingerKeyboard) :: [Video](https://www.youtube.com/watch?v=xI_Y875FghU)
 - #### SoundCatcher - Embedded Streaming Server
   [Code](https://github.com/SCCasper) :: [Video](https://www.youtube.com/watch?v=h2jTrTSD1wQ)
-
+- #### Nelp - Springboot
+  [Code](https://github.com/Nelp-dev/Nelp) :: <http://nelp.kr>
+- #### B-gle
+  [Code](https://github.com/B-gle/Server)
+  
 ## Press
 2015.09.23 Hansung University Engineering Contest **2nd** Prize
 
