--- a/_posts/2017-02-20-Jenkins.md
+++ b/_posts/2017-02-20-Jenkins.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 젠킨스(Jenkins) 설치하기
-categories: [Continuous Integration]
+categories: [Jenkins]
 excerpt: ' '
 comments: true
 share: true
