--- a/_posts/1992-04-24-author.md
+++ b/_posts/1992-04-24-author.md
@@ -69,7 +69,7 @@ Web / Server / Network / Software Engineering
 
 #### 2017
 - 2017.01.16 ~ 01.20 :: Hansung University Programming Camp Mentor
-- 2017.04.19 ~       :: **SK Tacademy Server Developer Course**
+- 2017.04.19 ~ 06.23 :: **SK Tacademy Server Developer Course**
 
 ## Project
 - #### Train Reservation Service - Using C Language
@@ -86,7 +86,7 @@ Web / Server / Network / Software Engineering
   [Code](https://github.com/Nelp-dev/Nelp) :: <http://nelp.kr>
 - #### B-gle
   [Code](https://github.com/B-gle/Server)
-  
+
 ## Press
 2015.09.23 Hansung University Engineering Contest **2nd** Prize
 
