--- a/_posts/2017-11-07-tf-idf.md
+++ b/_posts/2017-11-07-tf-idf.md
@@ -34,7 +34,7 @@ date: 2017-11-07T00:00:00.000Z
   ```
 
 ## 문서 정보
-
+- 3가지의 예제 문서가 있다고 가정하자.
 ![No Image](/assets/posts/20171107/1.png)
 
 ```java
@@ -137,6 +137,8 @@ for (HashMap documentMap : documentList) {
 ```
 
 - 결과값
+  - `tf-idf`값이 높을수록 다른 문서에 잘 언급되지 않은 단어(my, love, hate, hobby, is, passion)인 것을 알 수 있다.
+  - `tf-idf`값이 낮을수록 다른 문서에 잘 언급하는 단어(I, dogs, and, knitting)인 것을 알 수 있다.
 
 ![No Image](/assets/posts/20171107/idf.png)
 
@@ -144,7 +146,7 @@ for (HashMap documentMap : documentList) {
 
 # 마치며
 - Tf-IDF의 목적은 `다른 문서에 자주 언급되지 않고 해당 문서에는 자주 언급되는 token에 대해 점수를 높게 부여하는 것`.
-- 정해진 공식은 없다. 분석하는 데이터에 맞게 Tf-IDF를 변형해가며 다양한 시도를 해보자.
+- 정해진 공식은 없다. 분석하는 `데이터에 맞게` Tf-IDF를 변형해가며 다양한 시도를 해보자.
 
 # Source
 - <https://github.com/NESOY/tf-idfSample/blob/master/src/main/java/Tf_idfExample.java>
