--- a/_posts/2017-01-11-Maven.md
+++ b/_posts/2017-01-11-Maven.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: Intellij Maven
-categories: [Maven]
+categories: [Java]
 excerpt: " "
 comments: true
 share: true
-tags: [Intellij,Maven,Java]
+tags: [Java,Intellij,Maven]
 date: 2017-01-11
 ---
 # **Maven 이란?**
