--- a/_posts/2017-02-01-JUnit.md
+++ b/_posts/2017-02-01-JUnit.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: Testing Framework JUnit이란?
-categories: [Testing FrameWork]
+categories: [Testing]
 excerpt: ' '
 comments: true
 share: true
-tags: [Development Process,TDD,Test-driven Development,Testing FrameWork,JUnit]
+tags: [Testing,JUnit]
 date: 2017-02-01
 ---
 
