--- a/_posts/2017-02-20-Jenkins.md
+++ b/_posts/2017-02-20-Jenkins.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: 젠킨스(Jenkins) 설치하기
-categories: [Jenkins]
+categories: [DevOps]
 excerpt: ' '
 comments: true
 share: true
-tags: [Continuous Integration,CI,Jenkins]
+tags: [DevOps,Jenkins]
 date: 2017-02-20
 ---
 
