--- a/_posts/2017-03-18-ZSH.md
+++ b/_posts/2017-03-18-ZSH.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: oh-my-zsh 설치 및 적용하기
-categories: [Develop]
+categories: [개발환경]
 excerpt: ' '
 comments: true
 share: true
-tags: [Develop,Shell,Mac]
+tags: [개발환경,Mac]
 date: 2017-03-18
 ---
 
