--- a/_posts/2017-03-31-Selenium.md
+++ b/_posts/2017-03-31-Selenium.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: Selenium을 이용하여 스프링(Spring) Test하기
-categories: [Selenium]
+categories: [Testing]
 excerpt: ' '
 comments: true
 share: true
-tags: [Selenium,Testing,Web,Spring,SpringBoot]
+tags: [Selenium,Testing,Web,Spring]
 date: 2017-03-31
 ---
 
