--- a/_posts/2017-04-02-MongoDB.md
+++ b/_posts/2017-04-02-MongoDB.md
@@ -5,7 +5,7 @@ categories: [MongoDB]
 excerpt: ' '
 comments: true
 share: true
-tags: [MongoDB,NoSQL,MAC,DBMS]
+tags: [MongoDB]
 date: 2017-04-02
 ---
 
