--- a/_posts/2017-05-18-AWS.md
+++ b/_posts/2017-05-18-AWS.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: AWS EC2 시작하기
-categories: [AWS]
+categories: [DevOps]
 excerpt: ' '
 comments: true
 share: true
-tags: [AWS,Server,EC2]
+tags: [DevOps,AWS,EC2]
 date: 2017-05-18
 ---
 
