--- a/_posts/2017-10-07-Web-Font.md
+++ b/_posts/2017-10-07-Web-Font.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: 한글 웹 폰트 적용하기
-categories: [Web Font]
+categories: [Web]
 excerpt: ' '
-tags: [Web Font]
+tags: [Web]
 date: 2017-10-07
 ---
 
