--- a/_posts/2017-11-07-tf-idf.md
+++ b/_posts/2017-11-07-tf-idf.md
@@ -2,11 +2,10 @@
 layout: post
 title: TF-IDF란?
 categories:
-  - TF-IDF
+  - Algorithm
 excerpt: ' '
 tags:
-  - TF-IDF
-  - 자연어
+  - Algorithm
 date: 2017-11-07T00:00:00.000Z
 ---
 
