--- a/_posts/2017-01-31-TDD.md
+++ b/_posts/2017-01-31-TDD.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: 테스트 주도 개발방법론 TDD(Test-driven Development)이란?
-categories: [Development Process]
+categories: [Software Engineering]
 excerpt: ' '
 comments: true
 share: true
-tags: [Development Process,TDD,Test-driven Development,JUnit]
+tags: [Software Engineering,TDD,JUnit]
 date: 2017-01-31
 ---
 
