--- a/_posts/2017-02-08-JSON.md
+++ b/_posts/2017-02-08-JSON.md
@@ -5,7 +5,7 @@ categories: [Web]
 excerpt: ' '
 comments: true
 share: true
-tags: [JSON,XML,API,Web,Java,Jackson]
+tags: [JSON,Web]
 date: 2017-02-08
 ---
 
