--- a/_posts/2017-01-31-TDD.md
+++ b/_posts/2017-01-31-TDD.md
@@ -383,16 +383,13 @@ Test 결과화면
 
 - Refactoring Field : Ctrl + Shift + A + Field  ( Ctrl + Alt + F)
 
-## 참조
+## Reference
+- <http://www.hoons.net/Lecture/View/644>
+- <http://huns.me/development/716>
+- <https://www.youtube.com/watch?v=wmHV6L0e1sU>
+- <https://github.com/msbaek/clean-coders-2013>
+- <http://www.nextree.co.kr/p11104/>
+- <http://huns.me/development/716>
 
-<http://www.hoons.net/Lecture/View/644>
 
-<http://huns.me/development/716>
-
-<https://www.youtube.com/watch?v=wmHV6L0e1sU>
-
-<https://github.com/msbaek/clean-coders-2013>
-
-<http://www.nextree.co.kr/p11104/>
-
-<http://huns.me/development/716>
+> 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
