--- a/_posts/2017-02-08-JSON.md
+++ b/_posts/2017-02-08-JSON.md
@@ -112,10 +112,10 @@ public Map getUserList(){
 ![NO Image](/assets/posts/20170208/3.PNG)
 
 
-## 참조
+## Reference
+- <http://pedrorijo.com/blog/scala-json/>
+- <http://blog.naver.com/haengro/220891448970>
+- <http://seongilman.tistory.com/117>
 
-<http://pedrorijo.com/blog/scala-json/>
 
-<http://blog.naver.com/haengro/220891448970>
-
-<http://seongilman.tistory.com/117>
+> 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
