--- a/_posts/2017-05-09-mysql-UTF8.md
+++ b/_posts/2017-05-09-mysql-UTF8.md
@@ -68,3 +68,6 @@ ALTER DATABASE [DB명] DEFAULT CHARACTER SET utf8;
 
 ### MySQL 재시작하기
 - `service mysql restart`
+
+
+> 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
