--- a/_posts/2018-03-06-LSP.md
+++ b/_posts/2018-03-06-LSP.md
@@ -101,3 +101,5 @@ class Test {
 
 ## Reference
 - <https://code.tutsplus.com/tutorials/solid-part-3-liskov-substitution-interface-segregation-principles--net-36710>
+
+> 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
