--- a/_posts/2018-03-06-LSP.md
+++ b/_posts/2018-03-06-LSP.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 리스코프 치환 원칙(Liskov Substitution Principle)이란?
+title: LSP(Liskov Substitution Principle)이란?
 categories:
   - Design Pattern
 excerpt: ' '
