--- a/_posts/2018-04-26-Java-JSON.md
+++ b/_posts/2018-04-26-Java-JSON.md
@@ -161,5 +161,9 @@ try {
 ### JSON 라이브러리 성능비교 자료
 - <https://www.developer.com/lang/jscript/top-7-open-source-json-binding-providers-available-today.html>
 
-## Reference
-- <https://en.wikipedia.org/wiki/Object-relational_mapping>
+
+## 정리하자면
+- Data의 크기와 성질, 사용하는 상황에 따라 어떠한 라이브러리를 사용했을때 장단점을 따져 선택할 수 있습니다.
+- 해당 라이브러리에 주의점을 미리 알고 사용하면 발생할 수 있는 버그를 예방할 수 있습니다.
+
+> 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
