Update Java JSON

--- a/_posts/2018-04-26-Java-JSON.md
+++ b/_posts/2018-04-26-Java-JSON.md
@@ -11,7 +11,7 @@ date: 2018-04-26
 ---
 
 # 들어가며
-> 사내 프로젝트를 진행하던 과정에서 사용했던 Java JSON 라이브러리에 대해 정리하고 과정에서 겪었던 문제를 공유하고 기록하기 위해 작성합니다. :)
+> 프로젝트를 진행하던 과정에서 사용했던 Java JSON 라이브러리에 대해 정리하고 과정에서 겪었던 문제를 공유하고 기록하기 위해 작성합니다. :)
 
 # Java JSON 라이브러리에 대해
 
