Update Java Logo

--- a/_posts/2018-04-26-Java-JSON.md
+++ b/_posts/2018-04-26-Java-JSON.md
@@ -9,7 +9,7 @@ tags:
 
 date: 2018-04-26
 ---
-![No Image](/assets/posts/20180502/Java.jpg)
+![No Image](/assets/logo/Java.jpg)
 
 # 들어가며
 > 프로젝트를 진행하던 과정에서 사용했던 Java JSON 라이브러리에 대해 정리하고 과정에서 겪었던 문제를 공유하고 기록하기 위해 작성합니다. :)
