--- a/_posts/2017-02-20-Jenkins.md
+++ b/_posts/2017-02-20-Jenkins.md
@@ -9,7 +9,7 @@ tags: [DevOps,Jenkins]
 date: 2017-02-20
 ---
 
-![NO Image](/assets/posts/20170220/Jenkins.PNG)
+![NO Image](/assets/logo/Jenkins.PNG)
 
 ## 1. 젠킨스(Jenkins)란?
 - 지속적인 통합 CI(Continuous Integration) Server이다.
@@ -52,6 +52,24 @@ date: 2017-02-20
 
 ![NO Image](/assets/posts/20170220/5.PNG)
 
+## Error - 아래와 같은 화면이 처음이라면?
+![NO Image](/assets/posts/20170220/6.png)
 
+### 초기 비밀번호를 다시 설정해 줘야 합니다.
+> 경로 : `C:Users/사용자/.jenkins/secrets/initialAdminPassword`
+
+![NO Image](/assets/posts/20170220/7.png)
+
+### Password를 입력한 모습
+![NO Image](/assets/posts/20170220/8.png)
+
+### 다음 설정화면 입니다.
+![NO Image](/assets/posts/20170220/9.png)
+
+### Admin 계정을 만들고.
+![NO Image](/assets/posts/20170220/10.png)
+
+### Jenkins를 즐기시면 됩니다 :)
+![NO Image](/assets/posts/20170220/11.png)
 
 > 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
