--- a/_posts/2018-07-11-DDD-Event.md
+++ b/_posts/2018-07-11-DDD-Event.md
@@ -101,7 +101,10 @@ date: 2018-07-11
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/xSnFAa7RtOSi0P" width="510" height="420" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 
 
+
 ## Reference
 - <https://github.com/iamkyu/TIL/blob/master/books/summary/ddd-start.md#10-%EC%9D%B4%EB%B2%A4%ED%8A%B8>
 - <https://www.student.cs.uwaterloo.ca/~cs446/1171/Arch_Design_Activity/PublishSubscribe.pdf>
 - <https://aws.amazon.com/ko/pub-sub-messaging/>
+
+> 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
