--- a/_posts/2018-07-19-DDD-CQRS.md
+++ b/_posts/2018-07-19-DDD-CQRS.md
@@ -24,8 +24,7 @@ date: 2018-07-19
 ### 도메인의 구조
 - 상태를 변경할 때와 조회할 때 단일 도메인을 사용하기 때문에 문제가 발생합니다.
     - ORM(Object-relational mapping)은 도메인의 상태 변경을 구현하는 데 적합하지만,
-    - 여러 Aggregate에서 데이터를 가져와 출력하는 기능을 구현 복잡도가 높아집니다.
-
+    - 여러 Aggregate에서 데이터를 가져와 출력하는 기능을 구현하다보면 도메인 복잡도가 점점 높아지는 문제가 발생합니다.
 
 > CQRS는 단일 모델을 사용할 때 발생하는 복잡도를 해결하기 위해 사용하는 방법입니다.
 
@@ -53,21 +52,45 @@ date: 2018-07-19
 
 ### Event Sourcing 구조
 ![No Image](/assets/posts/20180719/5.png)
-- Event Sourcing : Application내의 모든 Activity를 이벤트로 전환해서 이벤트 스트림(Event Stream)을 별도의 Database에 저장하는 방식을 말합니다. 
+- Event Sourcing : Application내의 모든 Action을 이벤트로 전환해서 이벤트 스트림(Event Stream)을 별도의 Database에 저장하는 방식을 말합니다. 
 
-## 정리하면서
-- 장점
-    - 각각의 도메인 목적에 맞게 집중하여 개발할 수 있습니다.
-    - 명령과 쿼리 파이프라인을 원하는대로 최적화하면서 다른 요소가 깨질 위험은 거의 없다는 것
+#### Example Event Store
+| id	| root_id | event |
+|---|---|---|
+| 1 | 1 | 카트 생성함 |
+| 2	| 1 | 상품1 추가함 |
+| 3	| 1 | 상품2 추가함 |
+| 4	| 1	| 상품2 제거함 |
+| 5	| 1	| 배송정보 입력함 |
+
+- 실행되는 데이터베이스 연산은 삽입(insert) 뿐입니다. 
+- 수량이 변경된 부분도, 삭제되는 부분도 이벤트이기 때문에 갱신(update)이나 삭제(delete) 연산은 수행되지 않습니다.
+- [개체 관계형 임피던스 불일치](https://en.wikipedia.org/wiki/Object-relational_impedance_mismatch)
+
+#### 장점.
+- 트랜잭션 처리 중 경합이 없습니다.
+- 모든 변경 내역이 이벤트로 기록되기 때문에 원하는 시점으로 Rollback이 가능하게 됩니다.
+- 메시지 중심(Message-Driven) 아키텍처에 적합합니다.
+- Event Monitoring이 필요한 경우에 적합합니다.
+
+#### 단점.
+- 상태 불일치가 발생할 수 있습니다.
+- 업데이트 충돌 발생이 매우 적은 시스템에는 적합하지 않습니다.
+- 데이터 뷰 일관성 및 실시간 업데이트가 필요한 시스템에는 적합하지 않습니다.
+
+## 정리하며
+### 장점
+- 각각의 도메인 목적에 맞게 집중하여 개발할 수 있습니다.
+- 명령과 쿼리 파이프라인을 원하는대로 최적화하면서 다른 요소가 깨질 위험은 거의 없다는 것
     
-- 단점
-    - 구현해야 할 코드가 더 많다는 것.
-    - 더 많은 구현 기술이 필요하다는 것.
-    - 유지 비용 증가.
+### 단점
+- 구현해야 할 코드가 더 많다는 것.
+- 더 많은 구현 기술이 필요하다는 것.
+- 유지 비용 증가.
 
-- 사용하지 않아야 할 경우
-    - 도메인 또는 비즈니스 규칙이 간단한 경우
-    - 대규모의 고차원적인 어플리케이션이 아닌 경우.
+### 사용하지 않아야 할 경우
+- 도메인 또는 비즈니스 규칙이 간단한 경우
+- 대규모의 고차원적인 어플리케이션이 아닌 경우.
 
 ## Reference
 - <https://docs.microsoft.com/ko-kr/azure/architecture/patterns/cqrs>
@@ -75,3 +98,6 @@ date: 2018-07-19
 - <https://msdn.microsoft.com/magazine/mt147237>
 - <https://www.future-processing.pl/blog/cqrs-simple-architecture/>
 - <https://docs.microsoft.com/ko-kr/azure/architecture/patterns/event-sourcing>
+- <https://www.haruair.com/blog/4008>
+
+> 댓글을 통해 피드백을 남겨주시거나 광고 한번 클릭해주시면 감사하겠습니다 :)
