Update DDD - CQRS Event Sourcing

--- a/_posts/2018-07-19-DDD-CQRS.md
+++ b/_posts/2018-07-19-DDD-CQRS.md
@@ -55,13 +55,14 @@ date: 2018-07-19
 - Event Sourcing : Application내의 모든 Action을 이벤트로 전환해서 이벤트 스트림(Event Stream)을 별도의 Database에 저장하는 방식을 말합니다. 
 
 #### Example Event Store
-| id	| root_id | event |
-|---|---|---|
-| 1 | 1 | 카트 생성함 |
-| 2	| 1 | 상품1 추가함 |
-| 3	| 1 | 상품2 추가함 |
-| 4	| 1	| 상품2 제거함 |
-| 5	| 1	| 배송정보 입력함 |
+
+ id	| root_id | event
+---- | :--: | ----
+ 1 | 1 | 카트 생성함
+ 2 | 1 | 상품1 추가함
+ 3 | 1 | 상품2 추가함
+ 4 | 1 | 상품2 제거함
+ 5 | 1 | 배송정보 입력함
 
 - 실행되는 데이터베이스 연산은 삽입(insert) 뿐입니다. 
 - 수량이 변경된 부분도, 삭제되는 부분도 이벤트이기 때문에 갱신(update)이나 삭제(delete) 연산은 수행되지 않습니다.
@@ -79,17 +80,17 @@ date: 2018-07-19
 - 데이터 뷰 일관성 및 실시간 업데이트가 필요한 시스템에는 적합하지 않습니다.
 
 ## 정리하며
-### 장점
+### CQRS 장점
 - 각각의 도메인 목적에 맞게 집중하여 개발할 수 있습니다.
 - 명령과 쿼리 파이프라인을 원하는대로 최적화하면서 다른 요소가 깨질 위험은 거의 없다는 것
     
-### 단점
+### CQRS 단점
 - 구현해야 할 코드가 더 많다는 것.
 - 더 많은 구현 기술이 필요하다는 것.
 - 유지 비용 증가.
 
 ### 사용하지 않아야 할 경우
-- 도메인 또는 비즈니스 규칙이 간단한 경우
+- 도메인 또는 비즈니스 규칙이 간단한 경우.
 - 대규모의 고차원적인 어플리케이션이 아닌 경우.
 
 ## Reference
