--- a/_posts/2017-03-01-Git-Stash.md
+++ b/_posts/2017-03-01-Git-Stash.md
@@ -9,6 +9,10 @@ tags: [Git]
 date: 2017-03-01
 ---
 
+![No Image](/assets/logo/git.png)
+
+## 들어가며
+
 > 다른 사람들과 협업을 하던 도중에 git pull을 통해 Project를 동기화하려고 했는데 Error Message가 발생하여 해결하기 위해 Git stash에 대해 알아보았다. 많은 사람들이 이 기능을 보면 쉽게 충돌 에러를 피할 수 있을 것 같아 포스트를 한다.
 
 ## Git pull 충돌 오류시 해결방법
@@ -81,6 +85,5 @@ $ git stash pop
 > 다른 사람들과 협력을 할때 pull을 통해 프로젝트를 동기화 하는 부분에서 충돌이 발생할 경우에 stash를 활용하면 쉽고 빠르게 Merge를 하여 프로젝트를 진행할 수 있을 것 같다. 앞으로 자주 사용해 보자.
 
 
-## 참조
-
-<https://blog.outsider.ne.kr/788>
+## Reference
+- <https://blog.outsider.ne.kr/788>
