--- a/_posts/2017-05-12-git-stash.md
+++ b/_posts/2017-05-12-git-stash.md
@@ -9,6 +9,8 @@ tags: [Git]
 date: 2017-05-12
 ---
 
+![No Image](/assets/logo/git.png)
+
 > 프로그래밍 작업을 하던 도중에 다른 작업을 하기 위해 commit하지 않고 나중에 다시 돌아와서 작업을 다시 하고 싶을 경우가 있었는데 이 경우에 Git에서 Stashing이란 기능이 있어 기록을 남기기 위해 Posting합니다.
 
 ## Git Stash
