--- a/_posts/2018-07-24-2018-Thinking.md
+++ b/_posts/2018-07-24-2018-Thinking.md
@@ -97,7 +97,7 @@ date: 2018-07-24
 
 
 ## 정리하며
-2018년이 시작한지 6-7개월동안 많은 것을 배웠고, 남은 기간동안 앞으로 많은 것을 배워가려 한다. 2018년도 끝을 향해 지식의 부족함을 채우고 겸손하고 노력하자.
+2018년이 시작한지 6-7개월동안 많은 것을 배웠고, 남은 기간동안 앞으로 많은 것을 배워가려 한다. 2018년도 마지막까지 지식의 부족함을 채우고 겸손하고 노력하자.
 
 > 세상에 정해진 정답은 없었다. 정답은 사람들과 함께 만들어 간다는 사실을 기억하자.
 
